--- a/src/main/resources/templates/sysBackend.html
+++ b/src/main/resources/templates/sysBackend.html
@@ -39,7 +39,7 @@
 <nav class="nav navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-brand"><span style="width: 200px;font-size: 20px">系统后台</span></div>
+            <div class="navbar-brand" style="width: 200px;"><span style="font-size: 20px" onclick="goToCtrlHome()">系统后台</span></div>
 
             <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#LinkPart"
                     aria-controls="bs-navbar" aria-expanded="false">
@@ -51,22 +51,23 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li><a href="#">PART 1</a></li>
-                <li><a href="#">PART 2</a></li>
-                <li><a href="#">PART 3</a></li>
+                <li><a href="#" onclick="goToPersonCtrl()">人员管理</a></li>
+                <li><a href="#">食堂管理</a></li>
+                <li><a href="#">文章管理</a></li>
+                <li><a href="#">物品管理</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">SELECT<span class="caret"></span></a>
+                       aria-expanded="false">系统设置<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">PART 1</a></li>
-                        <li><a href="#">PART 2</a></li>
-                        <li><a href="#">PART 3</a></li>
+                        <li><a href="#">权限设置</a></li>
+                        <li><a href="#">单位、部门设置</a></li>
+                        <!--<li><a href="#">预留选项</a></li>-->
                     </ul>
                 </li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#" th:text="${user.username}"></a></li>
+                <li><a href="#" id="name" th:text="${user.username}"></a></li>
                 <li><a href="/">返回前台</a></li>
                 <li><a onclick="logout()" href="#">退出</a></li>
             </ul>
