--- a/src/main/resources/templates/sysBackend-canteen.html
+++ b/src/main/resources/templates/sysBackend-canteen.html
@@ -9,6 +9,10 @@
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-table.min.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-select.min.css}">
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-datepicker.min.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-switch.css}">
+    <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap-editable.css}">
+    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-editable.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-switch.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-table.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-select.min.css">
     <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-datepicker.min.css">
@@ -49,6 +53,12 @@
 <script th:src="@{/js/bootstrap-datepicker.min.js}"></script>
 <script th:src="@{/js/bootstrap-table-export.js}"></script>
 <script th:src="@{/js/tableExport.js}"></script>
+<script th:src="@{/js/bootstrap-switch.js}"></script>
+<script th:src="@{/js/bootstrap-editable.js}"></script>
+<script th:src="@{/js/bootstrap-table-editable.js}"></script>
+<script src="/static/js/bootstrap-switch.js"></script>
+<script src="/static/js/bootstrap-editable.js"></script>
+<script src="/static/js/bootstrap-table-editable.js"></script>
 <script src="/static/js/tableExport.js"></script>
 <script src="/static/js/bootstrap-table-export.js"></script>
 <script src="/static/js/bootstrap-datepicker.min.js"></script>
@@ -79,15 +89,16 @@
                 <li class="active"><a href="#" onclick="goToCanteenCtrl();">食堂管理</a></li>
                 <li><a href="#">文章管理</a></li>
                 <li><a href="#">物品管理</a></li>
-                <li class="dropdown">
-                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">系统设置<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">权限设置</a></li>
-                        <li><a href="#">单位、部门设置</a></li>
-                        <!--<li><a href="#">预留选项</a></li>-->
-                    </ul>
-                </li>
+                <li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
+                       <!--aria-expanded="false">系统设置<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">权限设置</a></li>-->
+                        <!--<li><a href="#">单位、部门设置</a></li>-->
+                        <!--&lt;!&ndash;<li><a href="#">预留选项</a></li>&ndash;&gt;-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
@@ -216,6 +227,14 @@
                                     </ul>
                                 </div>
                             </div>
+
+                            <div id="recordToolbar" class="input-group" style="width: 280px;text-align: left">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-default" onclick="submitDefaultComplete()">默认录入</button>
+                                    <button class="btn btn-default" onclick="submitComplete()">提交修改</button>
+                                </span>
+                            </div>
+
                             <div class="tableDiv" >
                                 <table id="recordTable"></table>
                             </div>
@@ -238,6 +257,7 @@
                     </div>
                     <div id="msgDiv4"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>
                     <div class="tableDiv">
+                        <input type="checkbox" id="menuSwitch">
                         <table id="menuTable"></table>
                     </div>
                 </div>
@@ -249,6 +269,7 @@
 
 <script>
     var typeFlag =0;
+    var menuFlag = 1;
 
     $(function () {
         $('#orderTable').bootstrapTable({
@@ -387,7 +408,7 @@
         $('#recordTable').bootstrapTable({
             url: '/CR/B_CanteenRecord.do',         //请求后台的URL（*）
             method: 'get',                      //请求方式（*）
-            toolbar: '#toolbar',                //工具按钮用哪个容器
+            toolbar: '#recordToolbar',                //工具按钮用哪个容器
             striped: true,                      //是否显示行间隔色
             cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
             pagination: true,                   //是否显示分页（*）
@@ -415,7 +436,7 @@
             showColumns: true,                  //是否显示所有的列
             showRefresh: true,                  //是否显示刷新按钮
             minimumCountColumns: 2,             //最少允许的列数
-            clickToSelect: true,                //是否启用点击选中行
+            clickToSelect: false,                //是否启用点击选中行
             height: 1000,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             uniqueId: "ID",                     //每一行的唯一标识，一般为主键列
             showToggle:true,                    //是否显示详细视图和列表视图的切换按钮
@@ -433,6 +454,11 @@
             columns:[
                 [
                     {
+                        rowspan:2,
+                        colspan:1,
+                        checkbox: true,
+                        align:'center'
+                    },{
                         rowspan:2,
                         colspan:1,
                         field: 'crid',
@@ -555,17 +581,28 @@
                         title: '早餐',
                         formatter:function (value,row,index) {
                             if (row.cc.breakfast === null){
-                                return '<span style="color: red"> 无信息 </span>';
+                                return '无信息'
                             }else {
                                 if (row.cc.breakfast === 0){
-                                    return '<span class="glyphicon glyphicon-remove"></span>';
+                                    return '否';
                                 }else {
-                                    return '<span class="glyphicon glyphicon-ok"></span>';
+                                    return '结';
                                 }
                             }
                         },
-                        align:'center'
-
+                        align:'center',
+                        width:80,
+                        editable:{
+                            title:'录入信息',
+                            type:'select',
+                            source:[{value:1,text:'结'},{value:0,text:'否'}],
+                            display:function (value) {
+                                switch (value){
+                                    case '结':$(this).html(value+'  <span class="glyphicon glyphicon-ok"></span>');break;
+                                    case '否':$(this).html(value+'  <span class="glyphicon glyphicon-remove"></span>');break;
+                                }
+                            }
+                        }
                     },{
                         colspan:1,
                         rowspan:1,
@@ -573,16 +610,28 @@
                         title: '午餐',
                         formatter:function (value,row,index) {
                             if (row.cc.lunch === null){
-                                return '<span style="color: red"> 无信息 </span>';
+                                return '无信息'
                             }else {
                                 if (row.cc.lunch === 0){
-                                    return '<span class="glyphicon glyphicon-remove"></span>';
+                                    return '否';
                                 }else {
-                                    return '<span class="glyphicon glyphicon-ok"></span>';
+                                    return '结';
                                 }
                             }
                         },
-                        align:'center'
+                        align:'center',
+                        width:80,
+                        editable:{
+                            title:'录入信息',
+                            type:'select',
+                            source:[{value:1,text:'结'},{value:0,text:'否'}],
+                            display:function (value) {
+                                switch (value){
+                                    case '结':$(this).html(value+'  <span class="glyphicon glyphicon-ok"></span>');break;
+                                    case '否':$(this).html(value+'  <span class="glyphicon glyphicon-remove"></span>');break;
+                                }
+                            }
+                        }
                     },{
                         colspan:1,
                         rowspan:1,
@@ -590,19 +639,57 @@
                         title: '晚餐',
                         formatter:function (value,row,index) {
                             if (row.cc.dinner === null){
-                                return  '<span style="color: red"> 无信息 </span>';
+                                return '无信息'
                             }else {
                                 if (row.cc.dinner === 0){
-                                    return '<span class="glyphicon glyphicon-remove"></span>';
+                                    return '否';
                                 }else {
-                                    return '<span class="glyphicon glyphicon-ok"></span>';
+                                    return '结';
                                 }
                             }
                         },
-                        align:'center'
+                        align:'center',
+                        width:80,
+                        editable:{
+                            title:'录入信息',
+                            type:'select',
+                            source:[{value:1,text:'结'},{value:0,text:'否'}],
+                            display:function (value) {
+                                switch (value){
+                                    case '结':$(this).html(value+'  <span class="glyphicon glyphicon-ok"></span>');break;
+                                    case '否':$(this).html(value+'  <span class="glyphicon glyphicon-remove"></span>');break;
+                                }
+                            }
+                        }
                     }
                 ]
-            ]
+            ],
+            onPostHeader:function () {
+                // $('.editable').editable({
+                //     display:function (value) {
+                //         console.log(value);
+                //     }
+                // });
+            },
+            onEditableSave: function (field, row, oldValue, $el) {
+                $.ajax({
+                    type: "post",
+                    url: "/CR/saveEdit",
+                    data: {"list":JSON.stringify(row)},
+                    success: function (data, status) {
+                        if (status == "success") {
+                            $('#recordTable').bootstrapTable('refresh');
+                        }
+                    },
+                    error: function () {
+                        alert("Error");
+                    },
+                    complete: function () {
+
+                    }
+
+                });
+            }
         });
         $('#namelistTable').bootstrapTable({
             url: '/canteen/getbackendOrdersNamelist.do',         //请求后台的URL（*）
@@ -696,9 +783,9 @@
 
         });
         $('#menuTable').bootstrapTable({
-            url: '',         //请求后台的URL（*）
+            url: '/menu/status',         //请求后台的URL（*）
             method: 'get',                      //请求方式（*）
-            toolbar: '#generateSelection',                //工具按钮用哪个容器
+            toolbar: '#menuSwitch',                //工具按钮用哪个容器
             toolbarAlign:'left',
             striped: true,                      //是否显示行间隔色
             cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
@@ -714,8 +801,7 @@
                 //这里的键的名字和控制器的变量名必须一致，这边改动，控制器也需要改成一样的
                 var temp = {
                     // rows: params.limit,                         //页面大小
-                    typeFlag:typeFlag,
-                    generateDate:$('#namelistDate').val()
+                    menuFlag:menuFlag,
                 };
                 return temp;
 
@@ -726,12 +812,12 @@
             showRefresh: true,                  //是否显示刷新按钮
             minimumCountColumns: 2,             //最少允许的列数
             clickToSelect: true,                //是否启用点击选中行
-            height: 500,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+            //height: 500,                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
             responseHandler:function (res) {
-                return res;
+                return res.rows;
             },
-            uniqueId: "ID",                     //每一行的唯一标识，一般为主键列
-            showToggle:true,                    //是否显示详细视图和列表视图的切换按钮
+            uniqueId: "CMID",                     //每一行的唯一标识，一般为主键列
+            showToggle:false,                    //是否显示详细视图和列表视图的切换按钮
             cardView: false,                    //是否显示详细视图
             detailView: false,                   //是否显示父子表
             icons:{
@@ -746,24 +832,31 @@
             },
             columns:[
                 {
-                    field: '',
+                    field: 'timeZone',
                     title: '时间',
-
-                    align:'center'
+                    align:'center',
+                    formatter:function (value,row,index) {
+                        switch (row.cmType){
+                            case 1:return '早餐';break;
+                            case 2:return '午餐';break;
+                            case 3:return '晚餐';break;
+                            default:return '';break;
+                        }
+                    }
                 },{
                     field: 'mon',
                     title: '周一',
                     align:'center'
                 }, {
-                    field: 'tues',
+                    field: 'tue',
                     title: '周二',
                     align:'center'
                 },{
-                    field: 'web',
+                    field: 'wed',
                     title: '周三',
                     align:'center'
                 },{
-                    field: 'thur',
+                    field: 'thu',
                     title: '周四',
                     align:'center'
                 },{
@@ -783,7 +876,24 @@
             ],
             showExport:true,
             exportDataType:'all',
-            exportTypes:['json', 'xml', 'excel']
+            exportTypes:['json', 'xml', 'excel'],
+            onLoadSuccess:function (data) {
+                $('#menuTable').bootstrapTable('mergeCells',{
+                    index: 0,
+                    field: 'timeZone',
+                    rowspan: 3
+                });
+                $('#menuTable').bootstrapTable('mergeCells',{
+                    index: 3,
+                    field: 'timeZone',
+                    rowspan: 4
+                });
+                $('#menuTable').bootstrapTable('mergeCells',{
+                    index: 7,
+                    field: 'timeZone',
+                    rowspan: 3
+                });
+            }
 
         });
 
@@ -791,8 +901,25 @@
             format: "yyyy-mm-dd",
             daysOfWeekHighlighted: "0,6",
             autoclose:true
-        })
-    })
+        });
+        $('#menuSwitch').bootstrapSwitch({
+            onText:'本周',
+            offText:'下周',
+            onSwitchChange:function (event, state) {
+                if (state){
+                    menuFlag = 1;
+                }else {
+                    menuFlag = 0;
+                }
+                $('#menuTable').bootstrapTable('refresh');
+            },
+            state:true
+        });
+
+
+
+
+    });
 
 
     function clearOrderSelection() {
@@ -804,7 +931,52 @@
         $('#personName2').val('');
     }
 
+    function submitDefaultComplete() {
+        var submitData = $('#recordTable').bootstrapTable('getSelections');
+        var json = JSON.stringify(submitData);
 
+        $.ajax({
+            url: '/CR/defaultEdit',
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: "application/json;charset=utf-8",
+            data: json,
+            success: function (data) {
+
+                if (data.stateCode === 404) {
+                    $('#recordTable').bootstrapTable('refresh');
+                }
+            }
+        })
+    }
+
+    function submitComplete() {
+        var submitData = $('#recordTable').bootstrapTable('getSelections');
+        var json = JSON.stringify(submitData);
+
+        $.ajax({
+            url: '/CR/saveEdit',
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: "application/json;charset=utf-8",
+            data: json,
+            success: function (data) {
+
+                if (data.stateCode === 404) {
+                    $('#recordTable').bootstrapTable('refresh');
+                }
+            }
+        })
+    }
+
+
+
+    function editableSwitch() {
+        var flag = false;
+        $('.ediable').editable({
+            disable:!flag
+        });
+    }
     function queryNamelist(type) {
         var date = $('#namelistDate').val();
         var $table = $('#namelistTable');
