--- a/src/main/resources/templates/sysBackend-persons.html
+++ b/src/main/resources/templates/sysBackend-persons.html
@@ -68,15 +68,16 @@
                 <li><a href="#" onclick="goToCanteenCtrl()">食堂管理</a></li>
                 <li><a href="#">文章管理</a></li>
                 <li><a href="#">物品管理</a></li>
-                <li class="dropdown">
-                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
-                       aria-expanded="false">系统设置<span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">权限设置</a></li>
-                        <li><a href="#">单位、部门设置</a></li>
-                        <!--<li><a href="#">预留选项</a></li>-->
-                    </ul>
-                </li>
+                <li><a href="#" onclick="goToSettingCtrl()">系统设置</a></li>
+                <!--<li class="dropdown">-->
+                    <!--<a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"-->
+                       <!--aria-expanded="false">系统设置<span class="caret"></span></a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li><a href="#">权限设置</a></li>-->
+                        <!--<li><a href="#">单位、部门设置</a></li>-->
+                        <!--&lt;!&ndash;<li><a href="#">预留选项</a></li>&ndash;&gt;-->
+                    <!--</ul>-->
+                <!--</li>-->
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
