--- a/src/main/resources/templates/sysBackend-setting.html
+++ b/src/main/resources/templates/sysBackend-setting.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Setting</title>
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
           <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
@@ -80,26 +80,59 @@
 </div>
 <div class="container" style="height: 768px;width: 100%;padding-left: 10px">
     <div class="row" style="height: inherit">
-        <div class="visible-md-block visible-lg-block">
-            <!--<div class="nav sidebar">-->
-                <!--<div class="container-fluid">-->
-                    <!--<div id="ToolPart" class="collapse navbar-collapse">-->
-                        <!--<ul class="nav navbar-sidebar">-->
-                            <!--<li><a href="#">PART 1</a></li>-->
-                            <!--<li><a href="#">PART 2</a></li>-->
-                            <!--<li><a href="#">PART 3</a></li>-->
-                        <!--</ul>-->
-
-                        <!--<ul class="nav navbar-sidebar">-->
-                            <!--<li><a href="#">PART 1</a></li>-->
-                            <!--<li><a href="#">PART 2</a></li>-->
-                            <!--<li><a href="#">PART 3</a></li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+        <div class="col-md-2 col-sm-2 col-xs-2 visible-md-block visible-lg-block">
+            <div class="nav sidebar">
+                <div class="container-fluid">
+                    <div id="ToolPart" class="collapse navbar-collapse">
+                        <ul class="nav navbar-sidebar">
+                            <li><a href="#">用餐定价</a></li>
+                            <li><a href="#">部门管理</a></li>
+                            <!--<li><a href="#">权限设置</a></li>-->
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div style="height: inherit;width: fit-content"></div>
+
+        <div class="col-md-10 col-sm-10 col-xs-10" style="border-left: gainsboro solid 1px ;">
+            <div id="canteenSetting" class="row ctrlCompent">
+                <div  class="page-header col-md-12 col-sm-12 col-xs-12">
+                    <h1>用餐定价 <small>Setting Price</small></h1>
+                </div>
+                <div id="msgDiv1"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>
+
+                <div class="row" style="margin: 0 auto">
+                    <label>早餐</label>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="oldBreakfastPrice">原价</label>
+                        <input type="text" id="oldBreakfastPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="newBreakfastPrice">现价</label>
+                        <input type="text" id="newBreakfastPrice" name="newBreakfastPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                    <label>午餐</label>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="oldLunchPrice">原价</label>
+                        <input type="text" id="oldLunchPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="newLunchPrice">现价</label>
+                        <input type="text" id="newLunchPrice" name="newLunchPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                    <label>晚餐</label>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="oldDinnerPrice">原价</label>
+                        <input type="text" id="oldDinnerPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                    <div class="form-group col-md-6 col-sm-6 col-xs-6">
+                        <label for="newDinnerPrice">现价</label>
+                        <input type="text" id="newDinnerPrice" name="newDinnerPrice" class="form-control"  style="width: 220px"><br>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 </body>
